--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="container">
 
         <!-- Brand -->
-        <a class="navbar-brand" href="index.html" target="_blank">
+        <a class="navbar-brand" href="#">
           <!--<img class="logo" src="img/logo.jpg"></img>-->
           <strong>NetTech</strong>
         </a>
@@ -460,7 +460,7 @@
         <i class="fab fa-youtube mr-3"></i>
       </a>
 
-      <a href="https://github.com/mdbootstrap/bootstrap-material-design" target="_blank">
+      <a href="https://github.com/aldo-barrios10/ProyectoBootstrap" target="_blank">
         <i class="fab fa-github mr-3"></i>
       </a>
     </div>
