Corrección de errores

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                   <strong>La empresa mejor valorada en México y el mundo para traer soluciones efectivas en el diseño y mantenimiento de redes </strong>
                 </p>
 
-                <a target="_blank" href="https://mdbootstrap.com/education/bootstrap/"
+                <a href="html/abut.html#email"
                   class="btn btn-outline-white btn-lg">
                   Contactanos
                 </a>
@@ -152,7 +152,7 @@
                   <strong>La empresa mejor valorada en México y el mundo para traer soluciones efectivas en el diseño y mantenimiento de redes</strong>
                 </p>
 
-                <a target="_blank" href="https://mdbootstrap.com/education/bootstrap/"
+                <a href="html/abut.html#email"
                   class="btn btn-outline-white btn-lg">
                   Contactanos 
                 </a>
@@ -188,7 +188,7 @@
                   <strong>La empresa mejor valorada en México y el mundo para traer soluciones efectivas en el diseño y mantenimiento de redes </strong>
                 </p>
 
-                <a target="_blank" href="https://mdbootstrap.com/education/bootstrap/"
+                <a href="html/abut.html#email"
                   class="btn btn-outline-white btn-lg">
                   Contactanos
                 </a>
@@ -456,7 +456,7 @@
         <i class="fab fa-twitter mr-3"></i>
       </a>
 
-      <a href="https://www.youtube.com/4" target="_blank">
+      <a href="https://www.youtube.com/" target="_blank">
         <i class="fab fa-youtube mr-3"></i>
       </a>
 
