--- a/html/abut.html
+++ b/html/abut.html
@@ -44,7 +44,7 @@
         <div class="container">
 
           <!-- Brand -->
-          <a class="navbar-brand" href="../index.html" target="_blank">
+          <a class="navbar-brand" href="../index.html" >
             <!--<img class="logo" src="img/logo.jpg"></img>-->
             <strong>NetTech</strong>
           </a>
@@ -383,7 +383,7 @@
             <div class="col-md-5 col-xl-5 mb-4">
 
               <!--Card-->
-              <div class="card">
+              <div class="card" id="email">
 
                 <!--Card content-->
                 <div class="card-body">
